--- a/bestcardgameever-android/Branches/Yaniv For Android/res/values/strings.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/res/values/strings.xml
@@ -17,6 +17,11 @@
 	<string name="scoresDialogHeading">What\'s The Score?</string>
 	<string name="scoresDialogOkMsg">Return to Game</string>
 
+	<!--  Settings dialog -->
+	<string name="settingsDialogHeading">Settings</string>
+	<string name="settingsDialogOkMsg">Save Changes</string>
+	<string name="settingsDialogCancelMsg">Cancel</string>
+
 	<string name="PerformYaniv">Yaniv!</string>
 	<string name="NextPlayer">Next!</string>
 	<!-- Strings for the main screen -->
